@@ -1,5 +1,8 @@
 2015-06-17  Jason Merrill  <jason@redhat.com>
 
+	PR c++/58063
+	* tree.c (bot_manip): Remap SAVE_EXPR.
+
 	PR c++/66387
 	* pt.c (tsubst_copy) [VAR_DECL]: Use process_outer_var_ref.
 
